--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dragNdrop</title>
-    <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     />
-    <script defer src="./index.js"></script>
+    <!-- <script defer src="./index.js"></script> -->
   </head>
   <body class="bg-gray-900 p-12 flex justify-center items-top">
     <div
@@ -46,6 +46,30 @@
           </footer>
         </article>
 
+        <article
+          draggable="true"
+          class="bg-white rounded-md overflow-hidden my-10 draggable"
+        >
+          <a href="#">
+            <img
+              alt="Placeholder"
+              class="block h-auto w-full"
+              src="https://img.youtube.com/vi/svgI-V_BBOs/maxresdefault.jpg"
+            />
+          </a>
+          <header class="pt-5 px-5 flex justify-between">
+            <h1 class="text-lg"><a href="#">Article</a></h1>
+            <div>14/2/20</div>
+          </header>
+          <footer class="px-5 py-3 flex items-center text-sm">
+            <img
+              alt="Placeholder"
+              class="w-6 block rounded-full"
+              src="https://www.datocms-assets.com/12596/1561887961-1560597249-przeprogramowanilogo.png?auto=format&fm=jpg"
+            />
+            <p class="ml-2 text-sm">Przeprogramowani</p>
+          </footer>
+        </article>
         <article
           draggable="true"
           class="bg-white rounded-md overflow-hidden my-10 draggable"
